FIX: Fix home title overflow bug

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,6 +12,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   position: relative;
   width: 100%;
+  max-width: 1024px;
   isolation: isolate;
   h1 {
     background-color: #fff;
@@ -23,17 +24,16 @@
     content: "";
     height: 2px;
     width: 100%;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: -1;
     background: linear-gradient(
       90deg,
       rgba(8, 78, 77, 1) 0%,
       rgba(8, 78, 77, 1) 80%,
       rgba(8, 78, 77, 0) 100%
     );
-
-    position: absolute;
-    top: 50%;
-    right: 0;
-    z-index: -1;
   }
 }
 
